# adep.asp.dev

./: .coverage  .dockerignore  .env.example  .env.template.yml  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ASE-Tree.md  ApexSigmaProjects.Dev.Cont.code-workspace  ApexSigmaProjects.Dev.code-temp-workspace.code-workspace  ApexSigmaProjects.Dev.code-workspace  ApexSigmaProjects.Dev.tree  Boot Sequence Configuration.toml  CLAUDE.md  DEPENDENCIES_SNAPSHOT.md  Dashboard Health.json  Directory_Structure.ini  Dockerfile  IFLOW.md  Keploy Test Automation Setup.yml  LLXPRT.md  Omega Vault Treemd.md  Omega Vault.md  Operation_Valhalla_Shield_Phase0_Complete.md  PHASE0_SESSION_SUMMARY.md  QWEN.md  QuickCapture.md  README.md  SETUP_SOD_COMMAND.md  SOD_DEPLOYMENT_GUIDE.md  analyze_projects_request.json  apexsigma.code-workspace  changelog.md  check_redis_client.py  conftest.py  conversation-2025-09-24-064414.txt  coverage.xml  dagster_workspace.yaml  (+34 more)
.apexsigma/: ApexSigma Projects.Dev Directory Structure 20092025 .md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.devcontainer.yml  setup.sh
.gemini/: settings.json
.github/: copilot-instructions.md
.obsidian/: app.json  appearance.json  community-plugins-SeanMiniPC.json  community-plugins.json  daily-notes.json  graph.json  note-composer.json  templates.json  webviewer.json  workspace-SeanMiniPC.json  workspace.json  zk-prefixer.json
.qwen/: PROJECT_SUMMARY.md
.taskmaster/: state.json
.trash/: Docker-Obsidian MCP Server-SeanMiniPC.md  Drawing 2025-09-28 23.55.00.excalidraw.md  Langfuse_Config-SeanMiniPC-2.md  Langfuse_Config-SeanMiniPC.md  OVS-WO-004-.md  OVS-WO-004-Verify Database Schema-SeanMiniPC.md  Untitled 1.md  Untitled-SeanMiniPC 2.md  Untitled-SeanMiniPC.md  Untitled.md  langfuse_keys-SeanMiniPC.md
.trunk/: trunk.yaml
ApexSigma/: ApexSigma Solutions- Short Organizational Biography.md  Omega Knowledge Base Index.md  Omega Knowledge Base Migration Log.md  README.md
DevTools/: Untitled-1.txt
Journal/: 20250928 ApexSigma EcoSystem - Morning Briefing Report.md
Junkyard/: &lt;poml&gt;&lt;Record&gt;&lt;Metadata&gt;&lt;ID&g.md  &lt;poml&gt;_&lt;Record&gt;_&lt;Metadata&gt;_&lt;I.md  ApexSigma Ecosystem Concise Overview.md  ApexSigma Ecosystem Status_ 16 September 2025_Markdown.md  ApexSigma_Ecosystem_Status_16_September_2025 (1).md  ApexSigma_Ecosystem_Status_16_September_2025.md  Chat_Session_Parse_for_Omega_Ingestion.md  Further_Research_Requisition_Prompt_(POML).md  GitHub Markdown - Fenced Code Blocks.md  I want you to take a look at the current Operation.md  Innovative Gemini CLI and Qwen Coder Plus Forks fo.md  Learn step-by-step how to integrate Zotero with Ma (1).md  MAR_(Mandatory_Agent_Review)_Sign-Off_Report (1).md  MAR_(Mandatory_Agent_Review)_Sign-Off_Report (3).md  MAR_(Mandatory_Agent_Review)_Sign-Off_Report.md  MAR_-_MEMOS-P0-T2_-_WO_Sign-Off_Report (1).md  MAR_-_MEMOS-P0-T2_-_WO_Sign-Off_Report.md  MAR_-_MEMOS-P0-T3_-_WO_Sign-Off_Report (1).md  Omega_InGest_Master_Instructional_Prompt.md  Operation_Asgard_Rebirth_-_memOS_MCP_Upgrade_Plan_(v6).md  Operation_Asgard_Rebirth_-_memOS_MCP_Upgrade_Plan_(v6)_Final (1).md  Operation_Asgard_Rebirth_-_memOS_MCP_Upgrade_Plan_(v6p0) .md  Operation_Valhalla_Shield_-_Ecosystem_Hardening_Plan_(v1.2).md  OptimPrompt-Knowledge-Base.md  Overview (1).md  Sprint_1_Plan_ADEP_Foundation.md  Untitled_Document.md  markdown-documents-2025-09-09.json  ✨_MAR_-_MEMOS-P0-T3_-_WO_Sign-Off_Report_✨.md
MCP_Server_Builds/: GEMINI.md  MCP Server Build Plan memOS & InGestLLM.yml  MCP_Server_Builds.code-workspace  QWEN.md  memos.as.code-workspace
Personal/: Sean Steyn aka SigmaDev11.md
Staging/: MAR REVIEW OVS-WO-001 S3.md  (+6 more)
(+1677 files in other folders)
