[tool.poetry]
name = "apexsigma-monorepo"
version = "0.1.0"
description = "Monorepo for ApexSigma"
authors = ["SigmaDev11 <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
apexsigma-core = { path = "libs/apexsigma-core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.0.0"
sqlalchemy = "^2.0"
aiohttp = "^3.8"
httpx = "^0.24"
structlog = "^23.1"
psycopg2-binary = "^2.9"
neo4j = "^5.13"
fastapi = "^0.100"
starlette = "^0.27"
prometheus-client = "^0.16"
redis = "^5.0"
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-jaeger = "1.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
