[tool.poetry]
name = "apexsigma-monorepo"
version = "0.1.0"
description = "Monorepo for ApexSigma"
authors = ["SigmaDev11 <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
apexsigma-core = { path = "libs/apexsigma-core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.0.0"
sqlalchemy = "^2.0"
aiohttp = "^3.8"
httpx = "^0.24"
structlog = "^23.1"
psycopg2-binary = "^2.9"
neo4j = "^5.13"
fastapi = "^0.100"
starlette = "^0.40.0"
h11 = "^0.16.0"
prometheus-client = "^0.16"
redis = "^5.0"
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-jaeger = "^1.21.0"
pyyaml = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=libs",
  "--cov=services",
  "--cov=scripts",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml",
  "--cov-report=json:coverage.json",
  "--cov-branch",
  "--cov-fail-under=80",
  "-v",
  "--tb=short",
  "--color=yes",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests requiring external services",
  "e2e: End-to-end tests requiring full service stack",
  "slow: Slow running tests",
  "asyncio: Async tests requiring asyncio support",
]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["libs", "services", "scripts"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/migrations/*",
  "*/__init__.py",
  "*/conftest.py",
  "*/.venv/*",
  "*/venv/*",
  "*/node_modules/*",
  "*/.trunk/*",
  "*/.git/*",
]
branch = true
parallel = false

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
  "@(typing\\.)?overload",
  "class .*\\bProtocol\\):",
  "except ImportError:",
  "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
